--- a/app/src/main/res/layout/activity_tela3.xml
+++ b/app/src/main/res/layout/activity_tela3.xml
@@ -4,6 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/padrao"
     tools:context=".Tela3">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="192dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.03"
+        app:srcCompat="@drawable/vladimirlenin" />
+
+    <RadioGroup
+        android:id="@+id/rdgLenin"
+        android:layout_width="371dp"
+        android:layout_height="194dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.154">
+
+        <RadioButton
+            android:id="@+id/rbtFarroupilha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clicou"
+            android:text="Farroupilha" />
+
+        <RadioButton
+            android:id="@+id/rbtFrancesa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clicou"
+            android:text="Francesa" />
+
+        <RadioButton
+            android:id="@+id/rbtRussa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clicou"
+            android:text="Russa" />
+
+        <RadioButton
+            android:id="@+id/rbtIndustrial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clicou"
+            android:text="Industrial" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/btnQst3"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="32dp"
+        android:enabled="false"
+        android:onClick="responder"
+        android:text="Responder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rdgLenin"
+        app:layout_constraintVertical_bias="0.973" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
