--- a/app/src/main/res/layout/activity_tela4.xml
+++ b/app/src/main/res/layout/activity_tela4.xml
@@ -5,73 +5,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/padrao"
-    tools:context=".Tela2">
+    tools:context=".Tela4" >
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView5"
         android:layout_width="192dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.034"
-        app:srcCompat="@drawable/pliniosalgado" />
+        app:layout_constraintVertical_bias="0.03"
+        app:srcCompat="@drawable/hitler" />
 
     <RadioGroup
-        android:id="@+id/rdgIntegralista"
+        android:id="@+id/rdgHitler"
         android:layout_width="371dp"
         android:layout_height="194dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.291"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.184">
+        app:layout_constraintTop_toBottomOf="@+id/imageView5">
 
         <RadioButton
-            android:id="@+id/rbtComunista"
+            android:id="@+id/rbtAlemanha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="clicou"
-            android:text="Comunista" />
+            android:text="Alemanha" />
 
         <RadioButton
-            android:id="@+id/rbtSocialista"
+            android:id="@+id/rbtFranca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="clicou"
-            android:text="Socialista" />
+            android:text="França" />
 
         <RadioButton
-            android:id="@+id/rbtTrabalhista"
+            android:id="@+id/rbtAustria"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="clicou"
-            android:text="Trabalhista" />
+            android:text="Áustria" />
 
         <RadioButton
-            android:id="@+id/rbtIntegralista"
+            android:id="@+id/radioButton4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="clicou"
-            android:text="Integralista" />
+            android:text="Bolívia" />
     </RadioGroup>
 
     <Button
-        android:id="@+id/btnQst2"
+        android:id="@+id/btnQst4"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:enabled="false"
+        android:clickable="true"
         android:onClick="responder"
-        android:text="responder"
+        android:text="RESPONDER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rdgIntegralista"
-        app:layout_constraintVertical_bias="0.887" />
-
+        app:layout_constraintTop_toBottomOf="@+id/rdgHitler" />
 </androidx.constraintlayout.widget.ConstraintLayout>
