--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,10 @@
 
     <Button
         android:id="@+id/btnIniciar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginTop="28dp"
-        android:enabled="true"
+        android:enabled="false"
         android:onClick="iniciar"
         android:text="INICIAR QUIZ"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,7 @@
 
     <Button
         android:id="@+id/btnSair"
-        android:layout_width="132dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:onClick="sair"
         android:text="SAIR"
