--- a/app/src/main/res/layout/activity_tela4.xml
+++ b/app/src/main/res/layout/activity_tela4.xml
@@ -25,8 +25,10 @@
         android:layout_height="194dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5">
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.202">
 
         <RadioButton
             android:id="@+id/rbtAlemanha"
@@ -62,10 +64,12 @@
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:clickable="true"
+        android:enabled="false"
         android:onClick="responder"
         android:text="RESPONDER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rdgHitler" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
