--- a/app/src/main/res/layout/activity_tela1.xml
+++ b/app/src/main/res/layout/activity_tela1.xml
@@ -66,6 +66,7 @@
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
+        android:layout_marginBottom="32dp"
         android:enabled="false"
         android:onClick="responder"
         android:text="RESPONDER"
@@ -74,6 +75,6 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rdgConstitucionalista"
-        app:layout_constraintVertical_bias="0.944" />
+        app:layout_constraintVertical_bias="0.943" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
