--- a/app/src/main/res/layout/activity_tela5.xml
+++ b/app/src/main/res/layout/activity_tela5.xml
@@ -59,13 +59,16 @@
 
     <Button
         android:id="@+id/btnQst5"
-        android:layout_width="200dp"
+        android:layout_width="270dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="32dp"
         android:enabled="false"
         android:onClick="responder"
         android:text="RESPONDER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rdgFonseca" />
+        app:layout_constraintTop_toBottomOf="@+id/rdgFonseca"
+        app:layout_constraintVertical_bias="0.921" />
 </androidx.constraintlayout.widget.ConstraintLayout>
